--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -18,10 +18,15 @@
         - @profiles.each do |profile|
           %tr
             %td= profile.name
-            %td=profile.status      
+            %td
+              - if profile.status
+                %input{checked: 'checked',class: 'profile_check', id: profile.id, data: { toggle: 'toggle', off: 'inactive', on: 'active'}, onclick: "change_status(#profile.id)", type: 'checkbox'}
+              - else
+                %input{ data: { toggle: 'toggle', off: 'inactive', on: 'active'}, class: 'profile_check', id: "#{profile.id}", onclick: "change_status(#profile.id)", type: 'checkbox'}
+
             %td= profile.gender
             %td= profile.website
-            %td= profile.person_id
+            %td= profile.person.name
             %td= link_to 'Show', profile
             %td= link_to 'Edit', edit_profile_path(profile)
             %td= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' }
