add style for all form and add datatable for addres and add select2 for form

--- a/app/views/addresses/show.html.haml
+++ b/app/views/addresses/show.html.haml
@@ -1,6 +1,19 @@
 %p#notice= notice
+%p
+  %b city:
+  = @address.city
+
+%p
+  %b country:
+  = @address.country
+%p
+  %b zip:
+  = @address.zip
+%p
+  %b Person:
+  = @address.person.name
 
 
-= link_to 'Edit', edit_address_path(@address)
-\|
-= link_to 'Back', addresses_path
+= link_to 'Edit', edit_address_path(@address),class: 'btn btn-primary'
+
+= link_to 'Back', addresses_path,class: 'btn btn-primary'
