--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -12,7 +12,7 @@
         .form-group.row
           %label.col-sm-2.col-form-label{for: "text"} Person
           .col-sm-10
-            = form.collection_select :person_id, Person.order(:name),:id,:name, class: "form-control", id: "placeholder-example"
+            = form.collection_select :person_id, Person.order(:name),:id,:name, class: "form-control",id: "dropdown"
         .form-group
           = form.label :Gender
           = form.select :gender,['Male', 'Female'], class: "form-control"
@@ -27,4 +27,3 @@
 
         .actions
           = form.submit"create profile", class:"btn btn-outline-secondary"
-          = link_to 'Back', profiles_path, class:"btn btn-outline-secondary"
