--- a/app/views/profiles/index.html.haml
+++ b/app/views/profiles/index.html.haml
@@ -27,10 +27,10 @@
             %td= profile.gender
             %td= profile.website
             %td= profile.person.name
-            %td= link_to 'Show', profile
-            %td= link_to 'Edit', edit_profile_path(profile)
-            %td= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' }
+            %td= link_to 'Show', profile,class: 'btn btn-primary'
+            %td= link_to 'Edit', edit_profile_path(profile),class: 'btn btn-primary'
+            %td= link_to 'Destroy', profile, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger"
 
     %br
 
-    = link_to 'New Profile', new_profile_path
+    = link_to 'New Profile', new_profile_path ,class: 'btn btn-primary'
