--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,8 @@
  * It is generally better to create a new file per style scope.
  *= require datatables/jquery_datatables
  *= require bootstrap-toggle
+ *= require select2
+ *= require select2-bootstrap
  *= require_tree .
  *= require_self
  */
