--- a/app/views/addresses/_form.html.haml
+++ b/app/views/addresses/_form.html.haml
@@ -1,10 +1,29 @@
 = form_for @address do |f|
-  - if @address.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@address.errors.count, "error")} prohibited this address from being saved:"
-      %ul
-        - @address.errors.full_messages.each do |message|
-          %li= message
+  .row
+  .col-sm-8
+    .card
+      .card-body
+        .form-group.row
+        - if @address.errors.any?
+          #error_explanation
+            %h2= "#{pluralize(@address.errors.count, "error")} prohibited this address from being saved:"
+            %ul
+              - @address.errors.full_messages.each do |message|
+                %li= message
 
-  .actions
-    = f.submit 'Save'
+        .form-group
+          = f.label :city
+          = f.text_field :city, class: 'form-control', placeholder: 'city'
+        .form-group
+          = f.label :country
+          = f.text_field :country, class: 'form-control', placeholder: 'country'
+        .form-group
+          = f.label :zip
+          = f.text_field :zip, class: 'form-control', placeholder: 'zip'
+        .form-group
+          = f.label :person
+          = f.collection_select :person_id, Person.order(:name),:id,:name, class: "form-control", id: "dropdown"
+          %br/
+
+        .actions
+          = f.submit 'Save',class: 'btn btn-primary'
