--- a/app/views/addresses/edit.html.haml
+++ b/app/views/addresses/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @address
-\|
-= link_to 'Back', addresses_path
+= link_to 'Show', @address,class: 'btn btn-primary'
+
+= link_to 'Back', addresses_path,class: 'btn btn-primary'
