--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -1,19 +1,24 @@
-%h1 Listing addresses
-
-%table
+%p#notice= notice
+%h1 Addresses
+%table#addressess
   %thead
     %tr
+      %th City
+      %th Country
+      %th zip
+      %th Person
       %th
       %th
       %th
-
   %tbody
     - @addresses.each do |address|
       %tr
-        %td= link_to 'Show', address
-        %td= link_to 'Edit', edit_address_path(address)
-        %td= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
-
-= link_to 'New Address', new_address_path
+        %td= address.city
+        %td= address.country
+        %td= address.zip
+        %td= address.person.name
+        %td= link_to 'Show', address,class: 'btn btn-primary'
+        %td= link_to 'Edit', edit_address_path(address),class: 'btn btn-primary'
+        %td= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger"
+%br/
+= link_to 'New Address', new_address_path, class:"btn btn-outline-secondary"
