--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @profile
+= link_to 'Show', @profile,class: 'btn btn-primary'
 \|
-= link_to 'Back', profiles_path
+= link_to 'Back', profiles_path,class: 'btn btn-primary'
