--- a/app/views/addresses/index.html.haml
+++ b/app/views/addresses/index.html.haml
@@ -3,20 +3,20 @@
 %table#addressess
   %thead
     %tr
-      %th City
+      %th customer
       %th Country
       %th zip
-      %th Person
+      %th City
       %th
       %th
       %th
   %tbody
     - @addresses.each do |address|
       %tr
-        %td= address.city
+        %td= address.person.name
         %td= address.country
         %td= address.zip
-        %td= address.person.name
+        %td= address.city
         %td= link_to 'Show', address,class: 'btn btn-primary'
         %td= link_to 'Edit', edit_address_path(address),class: 'btn btn-primary'
         %td= link_to 'Destroy', address, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-outline-danger"
