--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -2,4 +2,7 @@
 
 = render 'form'
 
-= link_to 'Back', addresses_path,class: 'btn btn-primary'
+- if params[:person_id]
+  = link_to 'Back', person_path(params[:person_id]), class: 'btn btn-primary'
+- else
+  = link_to 'Back', addresses_path,class: 'btn btn-primary'
