--- a/app/views/people/gilgabytes.html.haml
+++ b/app/views/people/gilgabytes.html.haml
@@ -12,10 +12,7 @@
         We are a technology team. We are not going to tell you that we do it all like you are used to hearing from other development companies. We specialize in very specific areas. Here is our area of expertise:
         %p.lead
           .mb-auto
-            %h5.cover-heading Sign in to see Our Customers
-          .mb-auto
-            %a.btn.btn-lg.btn.btn-primary{:href => user_azure_oauth2_omniauth_authorize_path } Sign in
-
+            %h5.cover-heading welcome
         %footer.mastfoot.mt-auto
           .inner
             %p
@@ -24,7 +21,3 @@
                 %a{:href => "https://Gilgabytes.com/"} Gilgabytes
               = succeed "." do
                 %a{:href => "nooralnabi@gilgabytes.com"} @nooralnabi
-      /
-        Bootstrap core JavaScript
-        \==================================================
-      / Placed at the end of the document so the pages load faster
