--- a/app/views/people/edit.html.haml
+++ b/app/views/people/edit.html.haml
@@ -1,7 +1,6 @@
 %h1 Editing person
 
-= render 'form'
+= render 'form'   
 
-= link_to 'Show', @person
-\|
- = link_to 'Back', people_path,class: 'btn btn-primary'
+= link_to 'Show', @person ,class: 'btn btn-primary'
+= link_to 'Back', people_path ,class: 'btn btn-primary'
