--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,6 +1,6 @@
 .panel.panel-default
   .panel-heading
-    %h2 people list
+    %h2 customers list
   .panel-body
     %table#person.display{data: {source: people_url(format: 'json')}}
       %thead
