--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -1,24 +1,22 @@
-.container
-  .card
-    .card-body
-      %p#notice= notice
+.card-deck.mb-3.text-center
+  .card.mb-4.box-shadow
+    %p#notice= notice
 
-      %p
-        %b Name:
-        = @profile.name
-      %p
-        %b status:
-        = @profile.status ? 'active' : 'inactive'
-      %p
-        %b Gender:
-        = @profile.gender
-      %p
-        %b Website:
-        = @profile.website
-      %p
-        %b Person:
-        = @profile.person.name
-
+    %p
+      %b Name:
+      = @profile.name
+    %p
+      %b status:
+      = @profile.status ? 'active' : 'inactive'
+    %p
+      %b Gender:
+      = @profile.gender
+    %p
+      %b Website:
+      = @profile.website
+    %p
+      %b Person:
+      = @profile.person.name
+    .pricing-header.text-center
       = link_to 'Edit', edit_profile_path(@profile),class: 'btn btn-primary'
-
       = link_to 'Back', profiles_path,class: 'btn btn-primary'
